--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ p{
  .navbar {
     margin-bottom: 0;
     border-radius: 0;
-	background-color:rgb(253, 141, 20);
+	background-color: rgb(98 185 252);
 	position: fixed;
     width: 100vw;
     height: 60px;
