--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ ul a{
 	color: rgb(0, 0, 0);
 	margin: 0 1rem;
 	text-transform: uppercase;
-	font-family:Arial, sans-serif; ;
+	font-family:Arial, sans-serif; 
 	font-weight: 600;
 	font-size: 14px;
 }
@@ -87,7 +87,7 @@ ul li{
 	display: inline-block;
 	color: #2e5470;
 	text-decoration: none;
-	font-size: 20px ;
+	font-size: 20px;
 	font-family: Impact, Haettenschweiler, 'Arial Narrow', sans-serif;
 
 }
@@ -239,7 +239,6 @@ p{
 	position: fixed;
     width: 100vw;
     height: 60px;
-    border-top: 0.5rem solid var(--primary-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
